@@ -8,6 +8,7 @@ MS SQL: Display foreign keys ON UPDATE and ON DELETE
 MS SQL: Fix altering foreign key
 MS SQL PDO: Support offset
 MS SQL: Remove support for MSSQL extension
+MS SQL: Add support for PDO_SQLSRV extension
 MongoDB: Remove support for deprecated extension mongo
 
 Adminer 4.17.1 (released 2025-02-25):
